Add libxil.a library

--- a/targets/FreeRTOS/XILINX_SOFTCORE_ARM/_bsp/CMakeLists.txt
+++ b/targets/FreeRTOS/XILINX_SOFTCORE_ARM/_bsp/CMakeLists.txt
@@ -7,5 +7,11 @@ include(NF_Utils)
 
 list(APPEND XILINX_BSP_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/include)
 
+# Add headers
 set(XILINX_BSP_INCLUDE_DIRS ${XILINX_BSP_INCLUDE_DIRS} CACHE INTERNAL "make global")
+
+# Add all the object files to executable
+SET(XILINX_BSP_INCLUDE_LIBS ${CMAKE_CURRENT_SOURCE_DIR}/libs/libxil.a)
+
+set(XILINX_BSP_INCLUDE_LIBS ${XILINX_BSP_INCLUDE_DIRS} CACHE INTERNAL "make global")
 
